# retrocause-ai

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  STATE.md  evidence_board_mockup.html  package-lock.json  package.json  pyproject.toml  start.py
.agent-guardrails/: config.json  task-contract.json
.codex/: instructions.md
docs/: DECISIONS.md  INDEX.md  PROJECT_STATE.md  PR_CHECKLIST.md  codebase-audit.md  engineering-audit.md  manual-smoke-test.md  market-analysis-overseas-c.md  mature-product-plan.md  open-source-growth-strategy.md  operational-plan.md  oss-pro-positioning.md  oss-release-gate.md  pro-planning-kickoff.md  pro-prd.md  pro-rust-architecture.md  pro-workflow-spec.md  references.md  retrieval-and-output-strategy.md  roadmap-and-limitations.md
examples/: basic_usage.py
frontend/: README.md  UI_DESIGN_SPEC.md  next.config.ts  package-lock.json  package.json
logs/: golden-us-iran-anthropic_claude-haiku-4-v2-response.json  golden-us-iran-anthropic_claude-sonnet-4-v2-response.json  golden-us-iran-meta-llama_llama-4-maverick-v2-response.json  golden-us-iran-mistralai_mistral-small-3.1-24b-instruct-v2-response.json  golden-us-iran-moonshotai_kimi-k2-v2-response.json  golden-us-iran-openai_gpt-4.1-mini-v2-response.json  golden-us-iran-openai_gpt-4o-mini-v2-response.json  golden-us-iran-qwen_qwen3-235b-a22b-v2-response.json  golden-us-iran-utf8-deepseek-v2-response.json  golden-us-iran-v2-response.json
pro/: Cargo.toml
pro/apps/api/: Cargo.toml
pro/apps/api/src/: main.rs
pro/apps/web/: Cargo.toml
pro/apps/web/src/: main.rs
pro/crates/domain/: Cargo.toml
pro/crates/domain/src/: lib.rs
pro/crates/event-store/: Cargo.toml
pro/crates/event-store/src/: lib.rs
pro/crates/provider-routing/: Cargo.toml
pro/crates/provider-routing/src/: lib.rs
pro/crates/queue/: Cargo.toml
pro/crates/queue/src/: lib.rs
pro/crates/run-store/: Cargo.toml
pro/crates/run-store/src/: lib.rs
retrocause/: __init__.py  anchoring.py  bayesian.py  cli.py  collector.py  config.py  counterfactual.py  debate.py  engine.py  evaluation.py  evidence_access.py  evidence_store.py  formatter.py  graph.py  hooks.py  hypothesis.py  llm.py  models.py  parser.py  pipeline.py  protocols.py  reliability.py  rules.py  uncertainty.py
scripts/: _qa_frontend_interactions.js  _qa_frontend_live.js  _sse_e2e.py  _test_api_path.py  _test_llm.py  _test_mh370.py  _test_sse_mh370.py  _test_stream.py  capture_screenshots.py  e2e_test.py  live_stability_probe.py  smoke_test.py  ui_smoke_test.py
tests/: test_anchoring.py  test_ap_news_source.py  test_api_retrieval_trace.py  test_auto_collect.py  test_causal_rag.py  test_citation.py  test_comprehensive.py  test_counterfactual.py  test_demo_data.py  test_engine.py  test_evaluation.py  (+9 more)
(+93 files in other folders)
