[project]
name = "retrocause"
version = "0.1.0"
description = "通用回溯因果推理引擎：给结果，逆推原因"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pgmpy>=0.1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
]
demo = [
    "streamlit>=1.30.0",
    "streamlit-agraph>=0.0.45",
]
bayesian = [
    "numpyro>=0.13.0",
    "jax>=0.4.0",
    "arviz>=0.17.0",
]
vector = [
    "chromadb>=0.4.0",
]

[project.scripts]
retrocause = "retrocause.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"



