[workspace]
members = [
    "apps/api",
    "apps/web",
    "crates/domain",
    "crates/event-store",
    "crates/provider-routing",
    "crates/queue",
    "crates/run-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["RetroCause"]

[workspace.dependencies]
axum = "0.8.6"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
