[package]
name = "retrocause-pro-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
retrocause-pro-domain = { path = "../../crates/domain" }
retrocause-pro-event-store = { path = "../../crates/event-store" }
retrocause-pro-provider-routing = { path = "../../crates/provider-routing" }
retrocause-pro-queue = { path = "../../crates/queue" }
retrocause-pro-run-store = { path = "../../crates/run-store" }
serde.workspace = true
tokio.workspace = true
