[package]
name = "retrocause-pro-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
maud.workspace = true
retrocause-pro-domain = { path = "../../crates/domain" }
serde_json.workspace = true
tokio.workspace = true
